<resources>
    <string name="app_name">Enger Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enger">Enger</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="message">Message</string>
</resources>