<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:scrollbars="none"
    android:padding="@dimen/_24sdp"
    android:overScrollMode="always"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login_to_continue"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/_12ssp"
            />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:paddingStart="@dimen/_14sdp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/_13ssp"
            />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:paddingStart="@dimen/_14sdp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/_13ssp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sign_in"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                app:cornerRadius="@dimen/_8sdp"
                app:backgroundTint="@color/black"
                />

            <ProgressBar
                android:id="@+id/loadingBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                />
        </FrameLayout>



        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_11ssp"
            />

    </LinearLayout>

</ScrollView>