<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            />
        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            >



        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/background_image"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/textAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
    </FrameLayout>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:paddingStart="@dimen/_14sdp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/_13ssp"
            />
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:paddingStart="@dimen/_14sdp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/_13ssp"
            />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:paddingStart="@dimen/_14sdp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/_13ssp"
            />

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:paddingStart="@dimen/_14sdp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/_13ssp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sign_up"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                app:cornerRadius="@dimen/_8sdp"
                app:backgroundTint="@color/black"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>



        <TextView
            android:id="@+id/have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/have_an_account"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_11ssp"
            />

    </LinearLayout>

</ScrollView>